fix onion's jank