@@ -250,7 +250,7 @@ public class ToolHelper {
         List<BlockPos> harvestableBlocks = getHarvestableBlocks(stack, player);
         if (!harvestableBlocks.isEmpty()) {
             for (BlockPos pos : harvestableBlocks) {
-                if (!destroyBlock(player, stack, pos, pos == targeted)) {
+                if (!destroyBlock(player, stack, pos, pos.equals(targeted))) {
                     return true;
                 }
 
@@ -473,21 +473,20 @@ public class ToolHelper {
      * @return listOfBlockPositions or empty list if none
      */
     public static List<BlockPos> getHarvestableBlocks(ItemStack stack, Player player) {
-        final List<BlockPos> NO_BLOCKS = List.of();
-        if (!hasBehaviorsComponent(stack)) return NO_BLOCKS;
+        if (!hasBehaviorsComponent(stack)) return Collections.emptyList();
 
-        var aoeDefinition = getAoEDefinition(stack);
+        AoESymmetrical aoeDefinition = getAoEDefinition(stack);
         if (aoeDefinition.isZero()) {
-            return NO_BLOCKS;
+            return Collections.emptyList();
         }
 
         InteractionHand hand = InteractionHand.MAIN_HAND;
         BlockHitResult hitResult = getPlayerDefaultRaytrace(player);
-        UseOnContext context = new UseOnContext(player, hand, hitResult);
+        UseOnContext context = new UseOnContext(player, InteractionHand.MAIN_HAND, hitResult);
         return getHarvestableBlocks(aoeDefinition, context);
     }
 
-    public static BlockHitResult getPlayerDefaultRaytrace(@NotNull Player player) {
+    public static BlockHitResult getPlayerDefaultRaytrace(Player player) {
         return entityPickBlock(player, player.blockInteractionRange(), 1.0f, false);
     }
 
